minor css update to fix overlapping uis

--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -3,7 +3,6 @@
     padding: 0 2rem 0 2rem;
     width: 100%;
     max-width: 420px;
-    font-family: 'Poppins', sans-serif;
 }
 
 .brand-logo {
