--- a/src/app/quiz/quiz.component.scss
+++ b/src/app/quiz/quiz.component.scss
@@ -1,6 +1,5 @@
         /* CSS Styling */
         .main {
-            font-family: 'Poppins', sans-serif;
             margin: 0;
             padding: 0;
             display: flex;
