--- a/src/global.scss
+++ b/src/global.scss
@@ -57,3 +57,6 @@ ion-modal.modal-default:not(.overlay-hidden)~ion-modal.modal-default {
     padding: 10px;
   }
   
+  *{
+    font-family: 'Poppins', sans-serif;
+  }
